# bereal

./: .gitignore  README.md  logfile  logfile.txt  test.txt
backend/: Cargo.toml  deploy-rust-chatserver.sh  deploy.sh
backend/my_sqlx_crud/: Cargo.toml
backend/my_sqlx_crud/src/: lib.rs
backend/my_sqlx_crud_macro/: Cargo.toml
backend/my_sqlx_crud_macro/src/: lib.rs
backend/src/: general_helpers.rs  lib.rs  main.rs  types.rs
backend/src/database/: comment_controller.rs  helpers.rs  image_controller.rs  mod.rs  post_controller.rs  sql_helpers.rs  user_controller.rs
backend/src/database/canned_queries/: mod.rs  post_queries.rs  what_are_those.md
backend/src/database/types/: comment.rs  image.rs  mod.rs  post.rs  user.rs
backend/src/db_helpers/: comments.rs  messages.rs  mod.rs  users.rs
backend/src/helpers/: auth_helpers.rs  mod.rs
backend/src/socket_handlers/: mod.rs  on_subscribe.rs  top_level_handler.rs  types.rs
backend/src/websockets/: client.rs  handler.rs  mod.rs  types.rs
backend/tests/: setup_socket_conn.rs  test_basic_sockets.rs  test_postgresql_tables.rs
backend/tests/common/: mod.rs  setup_database.rs  setup_socket_conn.rs
frontend/frontend/: ContentView.swift  errors.swift  feed.swift  frontendApp.swift  websocket.swift
frontend/frontend.xcodeproj/: project.pbxproj
frontend/frontend.xcodeproj/project.xcworkspace/xcuserdata/dkRaHySa.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/frontend.xcodeproj/xcuserdata/dkRaHySa.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend/frontend/Assets.xcassets/Drawing.imageset/: Contents.json
frontend/frontend/dtos/: comment.swift  image.swift  post.swift
frontend/frontend/types/: PopulatedComment.swift  PopulatedPost.swift
frontend/frontend/views/: PostView.swift
frontend/frontendTests/: frontendTests.swift
frontend/frontendUITests/: frontendUITests.swift  frontendUITestsLaunchTests.swift
scripts/: deploy_local.py  helpers.py  postgres_helpers.py  run_integration_tests.py
