[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17", features = ["ws"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.193"
sqlx = { version = "0.7.3", features = ["postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
