[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
sqlx = { version = "0.7.3", features = ["postgres"] }
uuid = { version = "1.6.1", features = ["v4"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.6.17", features = ["ws"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
