[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.193"
serde_json = "1.0.110"
sqlx = { version = "0.6", features = ["postgres", "sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1.6.1", features = ["v4"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.6.17", features = ["ws"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
strum_macros = "0.25.3"
futures = "0.3.30"
itertools = "0.12.0"
syn = "2.0.48"
quote = "1.0.35"
my_sqlx_crud_macro = { path = "./my_sqlx_crud_macro" }
my_sqlx_crud = { path = "./my_sqlx_crud" }
sqlx-core = "0.6"
enum-as-inner = "0.6.0"
tokio-shared-rt = "0.1.0"
